# cpp-middle-docker

./: CMakeLists.txt  README.md  conanfile.py
.devcontainer/: Dockerfile  default
src/: CMakeLists.txt  benchmark_tests.cpp  main.cpp  unit_tests.cpp
